<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".basic.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_5sdp"
            android:tint="@color/white"
            android:visibility="gone"
            app:srcCompat="@drawable/back_black"
            tools:ignore="VectorDrawableCompat" />

        <libertypassage.com.app.widgets.CenturyGothicBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:text="LIBERTY"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <libertypassage.com.app.widgets.CenturyGothicBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="&amp; PASSAGE"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="4">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/line"
                    android:tint="@color/colorPrimary" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/line"
                    android:tint="#39241C" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/line"
                    android:tint="#39241C" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/line"
                    android:tint="#39241C" />
            </LinearLayout>

            <libertypassage.com.app.widgets.CenturyGothicTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_1sdp"
                android:text="ENROLMENT DECLARATION"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:orientation="horizontal">

                <libertypassage.com.app.widgets.CustomCheckBox
                    android:id="@+id/checkBox_terms1"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:button="@null"
                    android:checked="true" />


                <libertypassage.com.app.widgets.CenturyGothicTextview
                    android:id="@+id/terms1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/term1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:orientation="horizontal">

                <libertypassage.com.app.widgets.CustomCheckBox
                    android:id="@+id/checkBox_terms2"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:button="@null"
                    android:checked="true" />


                <libertypassage.com.app.widgets.CenturyGothicTextview
                    android:id="@+id/terms2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/term2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:background="@color/gray" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:orientation="horizontal">

                <libertypassage.com.app.widgets.CustomCheckBox
                    android:id="@+id/checkBox_terms3"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:button="@null"
                    android:checked="true" />


                <libertypassage.com.app.widgets.CenturyGothicTextview
                    android:id="@+id/terms3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/terms3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:orientation="horizontal">

                <libertypassage.com.app.widgets.CustomCheckBox
                    android:id="@+id/checkBox_terms4"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:button="@null"
                    android:checked="true"/>

                <libertypassage.com.app.widgets.CenturyGothicTextview
                    android:id="@+id/terms4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/terms4"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>


            <libertypassage.com.app.widgets.CenturyGothicTextview
                android:id="@+id/tv_next"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/rounded_gradiant_button"
                android:gravity="center"
                android:text="NEXT"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>